--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
   <footer>
     <p><strong>Need additional help?</strong></p>
-    <p>Email us at: <a href="mailto:divinechatapp@gmail.com">divinechatapp@gmail.com</a></p>
+    <p>Email us at: <a href="mailto:krmc251@outlook.com">divinechatapp@gmail.com</a></p>
     <p>© 2025 DivineChat</p>
   </footer>
 </body>
